Create pac-man initial position

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ html, body {
 .grid div {
   width: 15px;
   height: 15px;
-  background-color: blue;
 }
 
 /* ----- elements ----- */
@@ -38,6 +37,7 @@ html, body {
 }
 
 .pacman {
-  background-color: yellow;
+  background-color: orange;
   border-radius: 7.5px;
+  border: none;
 }
