Style .scare-ghost

--- a/style.css
+++ b/style.css
@@ -62,3 +62,8 @@ html, body {
   background-color: orange;
   border: none;
 }
+
+.scared-ghost {
+  background-color: aquamarine;
+  border: none;
+}
