--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ html, body {
   padding: 10;
 }
 
+.container {
+  text-align: center;
+}
+
 /* ----- grid ----- */
 .grid {
   display: flex;
@@ -10,6 +14,7 @@ html, body {
   width: 560px;
   height: 560px;
   border: solid black;
+  margin: auto;
 }
 
 .grid div {
